syntax = "proto3";

package inventory.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/delyke/go_workspace_example/shared/pkg/proto/inventory/v1;inventory_v1";

service InventoryService{
  rpc GetPart(GetPartRequest) returns (GetPartResponse);

  rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}

// Информация о детали для сборки космических кораблей
message Part{
  string uuid = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int64 stock_quantity = 5;
  Category category = 6;
  Dimensions dimensions = 7;
  Manufacturer manufacturer = 8;
  repeated string tags = 9;
  map<string, MetadataValue> metadata = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// Доступные категории деталей
enum Category {
  CATEGORY_UNKNOWN_UNSPECIFIED = 0;
  CATEGORY_ENGINE = 1;
  CATEGORY_FUEL = 2;
  CATEGORY_PORTHOLE = 3;
  CATEGORY_WING = 4;
}

// Описание размеров детали
message Dimensions{
  double length = 1;
  double width = 2;
  double height = 3;
  double weight = 4;
}

// Информация о производителе
message Manufacturer{
  string name = 1;
  string country = 2;
  string website = 3;
}

// Гибкие метаданные для дополнительного описания детали
message MetadataValue{
  oneof kind{
    string string_value = 1;
    int64 int_64_value = 2;
    double double_value = 3;
    google.protobuf.BoolValue bool_value = 4;
  }
}

// Структура фильтра для получения деталей
message PartsFilter{
  repeated string uuids = 1;
  repeated string names = 2;
  repeated Category categories = 3;
  repeated string manufacturer_countries = 4;
  repeated string tags = 5;
}

//Запрос на получение определенной детали
message GetPartRequest{
  string uuid = 1;
}

//Ответ на запрос получения определенной детали
message GetPartResponse{
  Part part = 1;
}

//Запрос на получение списка деталей
message ListPartsRequest{
  optional PartsFilter filter = 1;
}

//Список деталей, удовлетворяющий фильтрам в запросе (если имеются, если нет - выдаст полный список)
message ListPartsResponse{
  repeated Part parts = 1;
}